# cp-cplusplus

./: .gitignore  .gitmodules  .init  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  make_test.py  template.md
.github/docker/: Dockerfile
.github/workflows/: ci.yml  docker-build.yml
include/: debug.hpp
src/: a  a.cpp  b.cpp  c.cpp  d.cpp
test/A/: A2.ans
test/B/: B1
tools/: Cargo.toml
tools/expander/: Cargo.toml  Makefile.toml
tools/expander/src/: lib.rs  main.rs  model.rs
tools/manager/src/: main.rs  model.rs
tools/manager/src/command/: build.rs  configure.rs  make.rs  mod.rs  run.rs  test.rs
tools/test-generator/: Cargo.toml
tools/test-generator/src/: lib.rs  main.rs  model.rs
