[package]
name = "tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[workspace]
members = [
    "expander",
    "manager",
    "test-generator",
]
resolver = "3"

[workspace.package]
edition ="2024"
publish = false
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"

[[bin]]
name = "manager"
path = "manager/src/main.rs"