[package]
name = "tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[workspace]
members = [
    "expander",
    "test-generator",
]
resolver = "3"

[workspace.package]
edition ="2024"
publish = false
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"
rstest = "0.25.0"

[dependencies]
clap.workspace = true
anyhow.workspace = true
rstest.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ratatui = "0.29.0"

test-generator = { path = "test-generator" }
expander = { path = "expander" }

[[bin]]
name = "manager"
path = "manager/src/main.rs"
